--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -51,3 +51,32 @@ img.dark-shadow {
 .inner-shadow {
     box-shadow: inset 0 0 20px #000000;
 }
+
+.hover-cursor:hover {
+    cursor: pointer;
+  }
+  
+  .hover-cursor:hover p {
+    width: 100%;
+    padding: 8px 15px;
+    visibility: visible;
+    opacity: 0.7;
+  }
+  
+  .hover-cursor {
+    position: relative;
+    text-align: center;
+  }
+  
+  .hover-cursor p {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: black;
+    color: white;
+    margin-bottom: 5px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: visibility 0s, opacity 0.3s linear;
+    transition: visibility 0s, opacity 0.3s linear;
+  }
