--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,6 +1,7 @@
 @use "sass:map";
 /* make the customizations */
 $theme-colors: ("info": #ffbc44,
+success: #00c851,
     "primary": #6331b4,
     "dark": #2a2a2a,
     "secondary": #a7a7a7,
